--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@react-spring/web": "^9.7.5",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.0.17",
+    "axios": "^1.8.4",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "dotnet": "^1.1.4",
     "motion": "^12.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
