--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^0.7.0",
     "@react-spring/web": "^9.7.5",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.0.17",
