--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "dotnet": "^1.1.4",
+    "ldrs": "^1.1.6",
     "motion": "^12.6.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
