--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-spring/web": "^9.7.5",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.0.17",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
